Name:           SciBaseTypes
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@bioinf.uni-leipzig.de
Copyright:      Christian Hoener zu Siederdissen, 2018
homepage:       https://github.com/choener/SciBaseTypes
bug-reports:    https://github.com/choener/SciBaseTypes/issues
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >= 1.10
tested-with:    GHC == 8.2.2
Synopsis:       Base types and classes for statistics, sciences and humanities
Description:
                This library provides a set of basic types and classes for
                statistics, sciences, and the humanities.



extra-source-files:
  changelog.md
  README.md



library
  exposed-modules:
    Algebra.Structure.SemiRing
    StatisticalMechanics.Ensemble
    Statistics.Odds
    Statistics.Probability

  build-depends: base                     >= 4.7      &&  < 5.0
               , lens                     >= 4.0
               , log-domain               >= 0.12
               , vector                   >= 0.10
               , vector-th-unbox          >= 0.2
               --
--               , aeson                    >= 0.8
--               , binary                   >= 0.7
--               , cereal                   >= 0.4
--               , cereal-vector            >= 0.2
--               , containers               >= 0.5
--               , deepseq                  >= 1.3
--               , hashable                 >= 1.2
--               , primitive                >= 0.5
--               , storable-tuple           >= 0.0.3
--               , unordered-containers     >= 0.2.5
--               , vector-binary-instances  >= 0.2
  ghc-options:
    -O2
    -funbox-strict-fields
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , FlexibleContexts
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , TupleSections
                    , TypeFamilies
                    , UndecidableInstances
                    , UnicodeSyntax



benchmark BenchmarkSciBaseTypes
  build-depends: base
               , SciBaseTypes
--               , containers
--               , criterion            >= 1.0.2
--               , deepseq
--               , mwc-random           >= 0.13
--               , unordered-containers
--               , vector
  hs-source-dirs:
    tests
  main-is:
    Benchmark.hs
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , ScopedTypeVariables
                    , TypeFamilies
                    , UnicodeSyntax
  ghc-options:
    -O2
    -funbox-strict-fields
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeFamilies
                    , UnicodeSyntax
  build-depends: base
               , SciBaseTypes
               , QuickCheck                   >= 2.7
               , tasty                        >= 0.11
               , tasty-quickcheck             >= 0.8
               , tasty-th                     >= 0.1



source-repository head
  type: git
  location: git://github.com/choener/SciBaseTypes

